# previewer

./: .dockerignore  .gitattributes  Cargo.toml  Dockerfile  code  code.rs  code.txt
.github/workflows/: deploy.yml  main.yml
deploy/: previewer.yaml
lib/highlightjs-rs/: Cargo.toml
lib/highlightjs-rs/src/: consts.rs  lib.rs
src/: app.rs  consts.rs  ipri.rs  main.rs  syntax.rs  utils.rs
src/handlers/: mod.rs
