[package]
name = "previewer_batbin"
version = "0.1.0"
authors = ["Udit Karode <udit.karode@gmail.com>"]
edition = "2018"

[dependencies]
imageproc = "0.22"
image = "0.23.14"
rusttype = "0.9.2"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
conv = "0.3.3"
reqwest = "0.11.3"
once_cell = "1.7"
hyperpolyglot = { git = "https://github.com/batbin-org/hyperpolyglot" }
syntect = { version = "4.4", default_features = false, features = ["assets", "dump-load", "regex-fancy", "parsing"] }
highlightjs-rs = {  path = "lib/highlightjs-rs"  }
futures = "0.3"

[profile.release]
opt-level = 3
