[package]
name = "previewer_batbin"
version = "0.1.0"
authors = ["Udit Karode <udit.karode@gmail.com>"]
edition = "2021"

[dependencies]
imageproc = "0.23"
image = "0.24"
rusttype = "0.9"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
conv = "0.3"
once_cell = "1"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
futures = "0.3"
reqwest = { version = "0.11", features = ["rustls-tls"], default-features = false }

[profile.release]
opt-level = 3
