[package]
name = "previewer_batbin"
version = "0.1.0"
authors = ["Udit Karode <udit.karode@gmail.com>"]
edition = "2021"

[dependencies]
imageproc = "0.25.0"
image = "0.25.9"
rusttype = "0.9.3"
tokio = { version = "1", features = ["full"] }
warp = { version = "0.4.2", features = ["server"] }
conv = "0.3.3"
once_cell = "1"
syntect = { version = "5.3.0", default-features = false, features = ["default-fancy"] }
bincode = "1.0"
futures = "0.3.31"
reqwest = { version = "0.12.28", features = ["rustls-tls"], default-features = false }

[profile.release]
opt-level = 3
